--- a/docs/src/pages/components/calendar-date.astro
+++ b/docs/src/pages/components/calendar-date.astro
@@ -174,7 +174,7 @@ import Link from "../../components/Link.astro";
     CSS parts allow for fine-grained styling and theming. They target specific
     elements inside the component. An element may have multiple parts, and a
     part may be used on multiple elements. They can be used in isolation, or
-    combined to e.g. style selected days within a range.
+    combined.
   </p>
 
   <p>
@@ -214,7 +214,7 @@ import Link from "../../components/Link.astro";
     </tr>
     <tr>
       <td><code>heading</code></td>
-      <td>The heading containing the month and year</td>
+      <td>The heading that labels the calendar</td>
     </tr>
   </Table>
 
