--- a/docs/src/pages/components/index.astro
+++ b/docs/src/pages/components/index.astro
@@ -10,7 +10,7 @@ import Link from "../../components/Link.astro";
       "A list of all calendar components offered by Cally, along with links to their respective API docs.",
   }}
 >
-  <h1 slot="intro">Component API</h1>
+  <h1 slot="intro">Components</h1>
 
   <p>
     Each component's properties/attributes, events, methods, slots, CSS parts
@@ -26,6 +26,11 @@ import Link from "../../components/Link.astro";
     <li>
       <Link href="/components/calendar-range/"
         ><code>{`<calendar-range>`}</code></Link
+      >
+    </li>
+    <li>
+      <Link href="/components/calendar-multi/"
+        ><code>{`<calendar-multi>`}</code></Link
       >
     </li>
     <li>
