fix docs heading style

--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -103,10 +103,8 @@ const {
     flex: 1;
   }
 
-  .intro {
-    h1 {
-      margin-block: var(--space-s) 0;
-    }
+  .intro :global(h1) {
+    margin-block: var(--space-s) 0;
   }
 
   .footer {
