add slot for heading

--- a/docs/src/pages/components/calendar-date.astro
+++ b/docs/src/pages/components/calendar-date.astro
@@ -238,14 +238,22 @@ import Link from "../../components/Link.astro";
       <td><code>previous</code></td>
       <td>
         The inner content of the previous page button. By default uses text
-        "Previous". You will likely want to slot an icon here.
+        "Previous". You will likely want to slot an icon here
       </td>
     </tr>
     <tr>
       <td><code>next</code></td>
       <td>
         The inner content of the next page button. By default uses text "Next".
-        You will likely want to slot an icon here.
+        You will likely want to slot an icon here
+      </td>
+    </tr>
+    <tr>
+      <td><code>heading</code></td>
+      <td>
+        By default displays the visible heading for the component. You may want
+        to replace this with a year select. A separate visually-hidden heading
+        is always rendered for accessibility purposes
       </td>
     </tr>
   </Table>
