add tentative prop to range

--- a/docs/src/pages/components/calendar-range.astro
+++ b/docs/src/pages/components/calendar-range.astro
@@ -79,6 +79,16 @@ import Link from "../../components/Link.astro";
       <td><code>undefined</code></td>
     </tr>
     <tr>
+      <td><code>tentative</code></td>
+      <td><code>tentative</code></td>
+      <td>
+        The date that is tentatively selected e.g. the start of a range
+        selection
+      </td>
+      <td><code>string</code></td>
+      <td><code>""</code></td>
+    </tr>
+    <tr>
       <td><code>firstDayOfWeek</code></td>
       <td><code>first-day-of-week</code></td>
       <td>
