add pageBy prop for controlling pagination behavior

--- a/docs/src/pages/components/calendar-date.astro
+++ b/docs/src/pages/components/calendar-date.astro
@@ -109,6 +109,16 @@ import Link from "../../components/Link.astro";
       <td><code>1</code></td>
     </tr>
     <tr>
+      <td><code>pageBy</code></td>
+      <td><code>page-by</code></td>
+      <td>
+        Whether next and previous should move by number of <code>months</code> or
+        by a single month at a time
+      </td>
+      <td><code>"months" | "single"</code></td>
+      <td><code>"months"</code></td>
+    </tr>
+    <tr>
       <td><code>isDateDisallowed</code></td>
       <td>-</td>
       <td>
