update internal link in `usage` page

--- a/docs/src/pages/guides/usage.astro
+++ b/docs/src/pages/guides/usage.astro
@@ -431,7 +431,7 @@ import Link from "../../components/Link.astro";
     is open or closed. Additionally, it might be helpful to communicate when a range
     selection has started and ended via a polite <code>aria-live</code> region. This
     could be achieved with the <code>rangestart</code> and <code>rangeend</code>
-    <a href="http://localhost:4321/cally/components/calendar-range/#events"
+    <a href="/components/calendar-range/#events"
       >events</a
     >. We could also add a hint to the input via <code>aria-describedby</code> to
     describe the expected format for manual entry.
