--- a/docs/src/pages/components/calendar-range.astro
+++ b/docs/src/pages/components/calendar-range.astro
@@ -133,6 +133,15 @@ import Link from "../../components/Link.astro";
       <td><code>"months"</code></td>
     </tr>
     <tr>
+      <td><code>formatWeekday</code></td>
+      <td><code>format-weekday</code></td>
+      <td>
+        Controls the format of the weekday headers in the month table
+      </td>
+      <td><code>"narrow" | "short"</code></td>
+      <td><code>"narrow"</code></td>
+    </tr>
+    <tr>
       <td><code>isDateDisallowed</code></td>
       <td>-</td>
       <td>
