update doc for calendar-month introduction

--- a/docs/src/pages/components/calendar-month.astro
+++ b/docs/src/pages/components/calendar-month.astro
@@ -18,9 +18,12 @@ import Link from "../../components/Link.astro";
     It should not be used alone, but as a descendant of one of
     <Link href="/components/calendar-date/"
       ><code>{`<calendar-date>`}</code></Link
-    > or
+    >,
     <Link href="/components/calendar-range/"
       ><code>{`<calendar-range>`}</code></Link
+    > or
+    <Link href="/components/calendar-multi/"
+      ><code>{`<calendar-multi>`}</code></Link
     >.
   </p>
 
