update doc for today attribute

--- a/docs/src/pages/components/calendar-date.astro
+++ b/docs/src/pages/components/calendar-date.astro
@@ -68,6 +68,13 @@ import Link from "../../components/Link.astro";
       <td><code>""</code></td>
     </tr>
     <tr>
+      <td><code>today</code></td>
+      <td><code>today</code></td>
+      <td>The date that is considered today</td>
+      <td><code>string</code></td>
+      <td><code>""</code></td>
+    </tr>
+    <tr>
       <td><code>focusedDate</code></td>
       <td><code>focused-date</code></td>
       <td>The date that is considered "focused" by the calendar</td>
