rename getPartsForDate -> getDayParts

--- a/docs/src/pages/components/calendar-date.astro
+++ b/docs/src/pages/components/calendar-date.astro
@@ -138,7 +138,7 @@ import Link from "../../components/Link.astro";
       <td><code>() =&gt; false</code></td>
     </tr>
     <tr>
-      <td><code>getPartsForDate</code></td>
+      <td><code>getDayParts</code></td>
       <td>-</td>
       <td>
         A function that takes a date and returns a string of CSS parts, allowing
