--- a/docs/src/pages/components/calendar-range.astro
+++ b/docs/src/pages/components/calendar-range.astro
@@ -142,9 +142,7 @@ import Link from "../../components/Link.astro";
     <tr>
       <td><code>formatWeekday</code></td>
       <td><code>format-weekday</code></td>
-      <td>
-        Controls the format of the weekday headers in the month table
-      </td>
+      <td>Controls the format of the weekday headers in the month table</td>
       <td><code>"narrow" | "short"</code></td>
       <td><code>"narrow"</code></td>
     </tr>
@@ -283,6 +281,12 @@ import Link from "../../components/Link.astro";
     <tr>
       <td><code>heading</code></td>
       <td>The heading that labels the calendar</td>
+    </tr>
+    <tr>
+      <td><code>months</code></td>
+      <td>
+        The element that wraps all <code>&lt;calendar-month&gt;</code> components
+      </td>
     </tr>
   </Table>
 
