--- a/docs/src/pages/components/calendar-month.astro
+++ b/docs/src/pages/components/calendar-month.astro
@@ -122,6 +122,14 @@ import Link from "../../components/Link.astro";
       <td>The table's body cells</td>
     </tr>
     <tr>
+      <td><code>col-weeknumber</code></td>
+      <td>The <code>&lt;col&gt;</code> for the week number</td>
+    </tr>
+    <tr>
+      <td><code>weeknumber</code></td>
+      <td>The <code>td</code> for the week number</td>
+    </tr>
+    <tr>
       <td><code>button</code></td>
       <td>Any button used in the component</td>
     </tr>
@@ -188,6 +196,22 @@ import Link from "../../components/Link.astro";
       <td><code>range-inner</code></td>
       <td>
         Any <code>day</code>s between the start and end of a date range
+      </td>
+    </tr>
+  </Table>
+
+  <Heading level={2}>Slots</Heading>
+
+  <Table>
+    <tr slot="head">
+      <th>Name</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <td>weeknumber</td>
+      <td>
+        If week numbers are shown, this slot holds the heading for the column.
+        Defaults to "#"
       </td>
     </tr>
   </Table>
