--- a/docs/src/pages/components/calendar-month.astro
+++ b/docs/src/pages/components/calendar-month.astro
@@ -126,6 +126,38 @@ import Link from "../../components/Link.astro";
       <td>The <code>&lt;col&gt;</code> for the week number</td>
     </tr>
     <tr>
+      <td><code>col-1</code></td>
+      <td>The <code>&lt;col&gt;</code> for the first day of the week</td>
+    </tr>
+    <tr>
+      <td><code>col-2</code></td>
+      <td>The <code>&lt;col&gt;</code> for the second day of the week </td>
+    </tr>
+    <tr>
+      <td><code>col-3</code></td>
+      <td>The <code>&lt;col&gt;</code> for the third day of the week</td>
+    </tr>
+    <tr>
+      <td><code>col-4</code></td>
+      <td>The <code>&lt;col&gt;</code> for the fourth day of the week</td>
+    </tr>
+    <tr>
+      <td><code>col-5</code></td>
+      <td>The <code>&lt;col&gt;</code> for the fifth day of the week</td>
+    </tr>
+    <tr>
+      <td><code>col-6</code></td>
+      <td>The <code>&lt;col&gt;</code> for the sixth day of the week</td>
+    </tr>
+    <tr>
+      <td><code>col-7</code></td>
+      <td>The <code>&lt;col&gt;</code> for the seventh day of the week</td>
+    </tr>
+    <tr>
+      <td><code>weekday</code></td>
+      <td>The <code>th</code> for the day of the week</td>
+    </tr>
+    <tr>
       <td><code>weeknumber</code></td>
       <td>The <code>td</code> for the week number</td>
     </tr>
