add parts for each day

--- a/docs/src/pages/components/calendar-month.astro
+++ b/docs/src/pages/components/calendar-month.astro
@@ -127,7 +127,35 @@ import Link from "../../components/Link.astro";
     </tr>
     <tr>
       <td><code>day</code></td>
-      <td>The buttons corresponding to each day in the grid</td>
+      <td>The buttons and headings corresponding to each day in the grid</td>
+    </tr>
+    <tr>
+      <td><code>day-0</code></td>
+      <td>The buttons and headings corresponding to Sunday</td>
+    </tr>
+    <tr>
+      <td><code>day-1</code></td>
+      <td>The buttons and headings corresponding to Monday</td>
+    </tr>
+    <tr>
+      <td><code>day-2</code></td>
+      <td>The buttons and headings corresponding to Tuesday</td>
+    </tr>
+    <tr>
+      <td><code>day-3</code></td>
+      <td>The buttons and headings corresponding to Wednesday</td>
+    </tr>
+    <tr>
+      <td><code>day-4</code></td>
+      <td>The buttons and headings corresponding to Thursday</td>
+    </tr>
+    <tr>
+      <td><code>day-5</code></td>
+      <td>The buttons and headings corresponding to Friday</td>
+    </tr>
+    <tr>
+      <td><code>day-6</code></td>
+      <td>The buttons and headings corresponding to Saturday</td>
     </tr>
     <tr>
       <td><code>selected</code></td>
