improve formatting changelog

--- a/docs/src/pages/changelog.astro
+++ b/docs/src/pages/changelog.astro
@@ -27,4 +27,8 @@ import Layout from "../layouts/Layout.astro";
   h2:is(:hover, :focus-visible) a {
     visibility: visible;
   }
+
+  h3 {
+    margin-block-start: var(--space-m);
+  }
 </style>
