add missing import to react example

--- a/docs/src/pages/guides/frameworks.astro
+++ b/docs/src/pages/guides/frameworks.astro
@@ -42,6 +42,7 @@ import { Code } from "astro:components";
     code={`
 import { useState } from "react";
 import { createRoot } from 'react-dom/client';
+import "cally";
 
 function App() {
   const [value, setValue] = useState("");
