--- a/docs/src/components/Example.astro
+++ b/docs/src/components/Example.astro
@@ -2,6 +2,7 @@
 import { Code } from "astro:components";
 import * as prettier from "prettier";
 import postcss from "postcss";
+// @ts-expect-error not sure why types aren't resolving
 import nesting from "postcss-nesting";
 
 interface Props {
