--- a/docs/src/pages/components/index.astro
+++ b/docs/src/pages/components/index.astro
@@ -38,5 +38,15 @@ import Link from "../../components/Link.astro";
         ><code>{`<calendar-month>`}</code></Link
       >
     </li>
+    <li>
+      <Link href="/components/calendar-select-month/"
+        ><code>{`<calendar-select-month>`}</code></Link
+      >
+    </li>
+    <li>
+      <Link href="/components/calendar-select-year/"
+        ><code>{`<calendar-select-year>`}</code></Link
+      >
+    </li>
   </ul>
 </Layout>
