--- a/docs/src/pages/components/calendar-multi.astro
+++ b/docs/src/pages/components/calendar-multi.astro
@@ -128,9 +128,7 @@ import Link from "../../components/Link.astro";
     <tr>
       <td><code>formatWeekday</code></td>
       <td><code>format-weekday</code></td>
-      <td>
-        Controls the format of the weekday headers in the month table
-      </td>
+      <td> Controls the format of the weekday headers in the month table </td>
       <td><code>"narrow" | "short"</code></td>
       <td><code>"narrow"</code></td>
     </tr>
@@ -259,6 +257,13 @@ import Link from "../../components/Link.astro";
     <tr>
       <td><code>heading</code></td>
       <td>The heading that labels the calendar</td>
+    </tr>
+    <tr>
+      <td><code>months</code></td>
+      <td>
+        The default slot, where <code>&lt;calendar-month&gt;</code>s get
+        rendered
+      </td>
     </tr>
   </Table>
 
